tarefa concluida do dia 13/04, resolvidos bugs relacionados ao comentário do card

--- a/contato.html
+++ b/contato.html
@@ -55,7 +55,7 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<div class="mr-auto"></div>
-						<ul class="navbar-nav nav justify-content-end">
+						<ul class="nav navbar-nav justify-content-end">
 							<li class="dropdown">
 								<a
 									href="#"
@@ -102,7 +102,7 @@
 							<li class="dropdown">
 								<a
 									href="#"
-									class="dropdown-toggle active p-2"
+									class="dropdown-toggle"
 									data-toggle="dropdown"
 									role="button"
 									aria-haspopup="true"
@@ -119,8 +119,10 @@
 								</ul>
 							</li>
 							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
-							<li class="p-2 nav-item"><a href="#">Blog</a></li>
-							<li class="p-2 nav-item"><a href="#">Contato</a></li>
+							<li class="p-2 nav-item">
+								<a href="https://blog.poussee.com.br/">Blog</a>
+							</li>
+							<li class="p-2 nav-item"><a href="contato.html">Contato</a></li>
 							<li class="p-2 nav-item diagnostico">
 								<a
 									href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"
@@ -158,6 +160,52 @@
 								e saiba mais sobre <br />
 								nossas soluções
 							</h2>
+							<form action="" class="contact-form">
+								<div class="form-content-container">
+									<div class="column-div">
+										<input type="text" />
+										<label for="">Nome</label>
+									</div>
+									<div class="column-div">
+										<input type="text" />
+										<label for="">Telefone</label>
+									</div>
+									<div class="column-div">
+										<input type="text" />
+										<label for="">E-mail</label>
+									</div>
+									<div class="column-div">
+										<input type="text" />
+										<label for="">Empresa</label>
+									</div>
+									<div class="column-div">
+										<textarea name="" id="" cols="30" rows="10"></textarea>
+										<label for="">Mensagem</label>
+									</div>
+									<div class="inline-div">
+										<div class="contact-checkbox">
+											<input type="checkbox" />
+										</div>
+										<label for=""
+											>Estou ciente das condições de tratamento dos meus dados e
+											concordo com a Política de Privacidade.</label
+										>
+									</div>
+									<div class="inline-div">
+										<div class="contact-checkbox">
+											<input type="checkbox" />
+										</div>
+										<label for=""
+											>Aceito receber conteúdos relacionados aos meus
+											interesses</label
+										>
+									</div>
+								</div>
+								<button>
+									Enviar
+									<img src="./assets/img/arrow-black.png" alt="Seta" />
+								</button>
+							</form>
 						</div>
 						<div class="col-md-6 col-12">
 							<img
