--- a/o-que-fazemos/anuncios-patrocinados.html
+++ b/o-que-fazemos/anuncios-patrocinados.html
@@ -39,9 +39,9 @@
 		<header class="main-header bg-anuncio">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
-					<a class="navbar-brand" href="index.html">
+					<a class="navbar-brand" href="./index.html">
 						<img
-							src="../assets/img/logo-poussee-white.png"
+							src=".././assets/img/logo-poussee-white.png"
 							alt="Logo Poussée"
 						/>
 					</a>
@@ -76,7 +76,7 @@
 										>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="branding.html">Branding</a>
+										<a href="./branding.html">Branding</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="desenvolvimento.html">Desenvolvimento</a>
@@ -90,7 +90,9 @@
 									<li class="p-2 nav-item">
 										<a href="inbound-marketing.html">Inbound Marketing</a>
 									</li>
-									<li class="p-2 nav-item"><a href="seo.html">SEO</a></li>
+									<li class="p-2 nav-item">
+										<a href="seo.html">SEO</a>
+									</li>
 									<li class="p-2 nav-item">
 										<a href="social-media.html">Social Media</a>
 									</li>
@@ -108,22 +110,28 @@
 								>
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
-										<a href="../nossa-historia.html">Nossa historia</a>
+										<a href=".././quem-somos/nossa-historia.html"
+											>Nossa historia</a
+										>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="../nosso-time.html">Nosso time</a>
+										<a href=".././quem-somos/nosso-time.html">Nosso time</a>
 									</li>
 								</ul>
 							</li>
 							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
-							<li class="p-2 nav-item"><a href="#">Blog</a></li>
-							<li class="p-2 nav-item"><a href="#">Contato</a></li>
+							<li class="p-2 nav-item">
+								<a href="https://blog.poussee.com.br/">Blog</a>
+							</li>
+							<li class="p-2 nav-item">
+								<a href="../contato.html">Contato</a>
+							</li>
 							<li class="p-2 nav-item diagnostico">
 								<a
 									href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"
 									target="_blank"
 									>Diagnostico gratuito<img
-										src="../assets/img/arrow-white.png"
+										src=".././assets/img/arrow-white.png"
 										alt="seta"
 								/></a>
 							</li>
@@ -294,7 +302,7 @@
 						</div>
 					</div>
 					<div class="row solution-grid">
-						<div class="col-md-7 offset-md-4 item-solution">
+						<div class="col-md-7 item-solution">
 							<p class="title-solution">
 								<img
 									src="../assets/img/o-que-fazemos/arrow-diag.png"
