--- a/quem-somos/nosso-time.html
+++ b/quem-somos/nosso-time.html
@@ -14,12 +14,12 @@
 			href="https://poussee.com.br./assets/img/icon/favicon-32x32.png"
 			type="image/x-icon"
 		/>
-		<link rel="stylesheet" href="./assets/style/style.css" />
-		<link rel="stylesheet" href="./Content/Plugins/Slick/slick.min.css" />
-		<link rel="stylesheet" href="./Content/Plugins/Slick/slick-theme.css" />
+		<link rel="stylesheet" href="../assets/style/style.css" />
+		<link rel="stylesheet" href="../Content/Plugins/Slick/slick.min.css" />
+		<link rel="stylesheet" href="../Content/Plugins/Slick/slick-theme.css" />
 		<link
 			rel="stylesheet"
-			href="./Content/Plugins/Bootstrap/bootstrap.min.css"
+			href="../Content/Plugins/Bootstrap/bootstrap.min.css"
 		/>
 		<link
 			rel="stylesheet"
@@ -29,7 +29,7 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css"
 		/>
-		<link rel="shortcut icon" href="./assets/img/favicon.ico" />
+		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
 		<script src="https://unpkg.com/scrollreveal"></script>
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
@@ -37,8 +37,11 @@
 		<header class="main-header bg-nosso-time">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
-					<a class="navbar-brand" href="index.html">
-						<img src="./assets/img/logo-poussee-white.png" alt="Logo Poussée" />
+					<a class="navbar-brand" href="../index.html">
+						<img
+							src="../assets/img/logo-poussee-white.png"
+							alt="Logo Poussée"
+						/>
 					</a>
 					<button
 						class="navbar-toggler"
@@ -53,7 +56,7 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<div class="mr-auto"></div>
-						<ul class="navbar-nav nav justify-content-end">
+						<ul class="nav navbar-nav justify-content-end">
 							<li class="dropdown">
 								<a
 									href="#"
@@ -66,34 +69,38 @@
 								>
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/anuncios-patrocinados.html"
+										<a href="../o-que-fazemos/anuncios-patrocinados.html"
 											>Anúncios patrocinados</a
 										>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/branding.html">Branding</a>
+										<a href="../o-que-fazemos/branding.html">Branding</a>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/desenvolvimento.html"
+										<a href="../o-que-fazemos/desenvolvimento.html"
 											>Desenvolvimento</a
 										>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/e-commerce.html">E-commerce</a>
+										<a href="../o-que-fazemos/e-commerce.html">E-commerce</a>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/full-service.html">Full service</a>
+										<a href="../o-que-fazemos/full-service.html"
+											>Full service</a
+										>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/inbound-marketing.html"
+										<a href="../o-que-fazemos/inbound-marketing.html"
 											>Inbound Marketing</a
 										>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/seo.html">SEO</a>
+										<a href="../o-que-fazemos/seo.html">SEO</a>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="o-que-fazemos/social-media.html">Social Media</a>
+										<a href="../o-que-fazemos/social-media.html"
+											>Social Media</a
+										>
 									</li>
 								</ul>
 							</li>
@@ -108,13 +115,21 @@
 									>Quem somos</a
 								>
 								<ul class="dropdown-menu">
-									<li class="p-2 nav-item"><a href="#">Nossa historia</a></li>
-									<li class="p-2 nav-item"><a href="#">Nosso time</a></li>
+									<li class="p-2 nav-item">
+										<a href="nossa-historia.html">Nossa historia</a>
+									</li>
+									<li class="p-2 nav-item">
+										<a href="nosso-time.html">Nosso time</a>
+									</li>
 								</ul>
 							</li>
 							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
-							<li class="p-2 nav-item"><a href="#">Blog</a></li>
-							<li class="p-2 nav-item"><a href="#">Contato</a></li>
+							<li class="p-2 nav-item">
+								<a href="https://blog.poussee.com.br/">Blog</a>
+							</li>
+							<li class="p-2 nav-item">
+								<a href="../contato.html">Contato</a>
+							</li>
 							<li class="p-2 nav-item diagnostico">
 								<a
 									href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"
@@ -135,98 +150,333 @@
 						<div class="col-md-12 col-12 text-left text-white">
 							<p class="subtitle">Nossa Time</p>
 							<hr />
-							<h1>Especialistas em transformar desafios em resultados</h1>
-							<a href="#" class="btn-green"
-								>Fale com a gente <img src="./assets/img/arrow.png" alt="Seta"
-							/></a>
+							<h1>
+								Especialistas em <br />
+								transformar desafios <br />
+								em resultados
+							</h1>
 						</div>
 					</div>
 				</div>
 			</section>
 		</header>
 		<main>
-			<section class="nossa-historia">
-				<div class="container">
-					<div class="row pb-5">
-						<div class="col-md-12 col-12 text-left">
-							<p class="subtitle">#WeArePoussée</p>
-							<hr />
-							<h1 class="title-content">
-								Impulsionados por <br />
-								desafios e pessoas
-							</h1>
-						</div>
-						<div class="col-md-6 col-12 img-service">
-							<img
-								src="./assets/img/quem-somos/nossaHistoria-imagem.png"
-								alt="Foto Nossa História"
-							/>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12 col-12 img-brands">
-							<img
-								src="./assets/img/quem-somos/nossaHistória-wehelpbrandsgrow.png"
-								alt="We help brands grow"
-							/>
-						</div>
-					</div>
-				</div>
-				<div class="floater-detail-historia">
+			<section class="nosso-time">
+				<div class="floater-detail-time">
 					<img
-						src="./assets/img/o-que-fazemos/overlay-curve.png"
+						src="../assets/img/o-que-fazemos/overlay-curve.png"
 						alt="overlay"
 					/>
 				</div>
-			</section>
-
-			<section class="premios">
 				<div class="container">
 					<div class="row pb-5">
 						<div class="col-md-12 col-12 text-center">
-							<p class="subtitle">Prêmios e certificados</p>
-							<img
-								src="./assets/img/quem-somos/divisóriaBranca.png"
-								alt="Faixa"
-							/>
-							<br />
+							<h1 class="title-content">
+								Conheça nosso time de experts <br />
+								em marketing e websites
+							</h1>
+							<hr />
+							<br /><br />
 						</div>
 					</div>
-					<div class="row justify-content-center text-center">
-						<div class="col-md-4 col-12 premio-img">
-							<img
-								src="./assets/img/quem-somos/nossaHistoria-premio2020.png"
-								alt="Foto Prêmio 2020"
-							/>
-							<br />
-							<h3>2020</h3>
-							<p>
-								Melhor profissional de Gestão de Projetos – Suzana Chiodo Prêmio
-								ABC da Comunicação.
-							</p>
+					<div class="row pb-5">
+						<div class="col-md-6 col-12">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/nossoTime-vinicius.png');
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Vinicius Passos</h5>
+									<hr />
+									<p class="text-time">CEO</p>
+								</div>
+							</div>
 						</div>
-						<div class="col-md-4 col-12 premio-img">
-							<img
-								src="./assets/img/quem-somos/nossaHistoria-premio2019.png"
-								alt="Foto Prêmio 2019"
-							/>
-							<br />
-							<h3>2019</h3>
-							<p>
-								Agência que mais contribuiu com o mercado Prêmio ABC da
-								Comunicação.
-							</p>
+						<div class="col-md-6 col-12 justify-content-center">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/nossoTime-suzana.png')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Suzana Chiodo</h5>
+									<hr />
+									<p class="text-time">Co-founder e Diretora de Contas</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row justify-content-center pb-5">
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Ianca-Carvalho.jpeg')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Ianca Carvalho</h5>
+									<hr />
+									<p class="text-time">Gestão de Projetos e Atendimento</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Leticia-Polli.jpeg')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Leticia Polli</h5>
+									<hr />
+									<p class="text-time">Atendimento</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Stefany-Ginach.jpeg')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Stefany Ginach</h5>
+									<hr />
+									<p class="text-time">Atendimento</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row justify-content-center pb-5">
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Lucas-Zoboli.jpg')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Lucas Zoboli</h5>
+									<hr />
+									<p class="text-time">Mídia Paga</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Cibele-Manetta.jpg')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Cibele Manetta</h5>
+									<hr />
+									<p class="text-time">Social Media</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Vinicios-Lombardi.JPG')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Vinicius Lombardi</h5>
+									<hr />
+									<p class="text-time">Redação</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row justify-content-end pb-5">
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Rhamon-Macedo.jpeg')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Rhamon Macedo</h5>
+									<hr />
+									<p class="text-time">Design</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Lucas-Stefanini.jpeg')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Lucas Stefanini</h5>
+									<hr />
+									<p class="text-time">Design</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Thais-Rodrigues.png')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Thais Rodrigues</h5>
+									<hr />
+									<p class="text-time">Design</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row justify-content-center pb-5">
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Alain-Gonzaga.jpg')
+										no-repeat;
+									background-size: cover;
+									background-position: center;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Alain Gonzaga</h5>
+									<hr />
+									<p class="text-time">Assistente de E-commerce</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-12 grid-time">
+							<div
+								class="card-time d-flex align-items-end justify-content-center"
+								style="
+									height: 320px;
+									background: url('../assets/img/quem-somos/fotos-do-time/Gabriel-Santos.jpeg')
+										no-repeat;
+									background-size: cover;
+									background-position: 90% 50%;
+								"
+							>
+								<div class="info-time">
+									<h5 class="title-time">Gabriel P. Santos</h5>
+									<hr />
+									<p class="text-time">Desenvolvimento</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<br /><br /><br /><br /><br /><br />
+
+			<section class="marcas-time">
+				<div class="container">
+					<p class="subtitle">Marcas</p>
+					<img
+						src="../assets/img/quem-somos/divisóriaBranca.png"
+						alt="Divisor"
+					/>
+					<p class="home-title">que ajudamos a crescer</p>
+					<div class="montadoras logos col-12 text-center">
+						<div class="logo">
+							<img
+								src="../assets/img/quem-somos/logoBranco-bodega.png"
+								alt="Logo"
+							/>
+						</div>
+						<div class="logo">
+							<img
+								src="../assets/img/quem-somos/logoBranco-evolution.png"
+								alt="Logo"
+							/>
+						</div>
+						<div class="logo">
+							<img
+								src="../assets/img/quem-somos/logoBranco-GA.png"
+								alt="Logo"
+							/>
+						</div>
+						<div class="logo">
+							<img
+								src="../assets/img/quem-somos/logoBranco-roge.png"
+								alt="Logo"
+							/>
+						</div>
+						<div class="logo">
+							<img
+								src="../assets/img/quem-somos/logoBranco-sercom.png"
+								alt="Logo"
+							/>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<div class="py-5"></div>
+
+			<br /><br /><br />
 
 			<section class="seja">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-12 notebook">
-							<img src="./assets/img/laptop.png" alt="Notebook" />
+							<img src="../assets/img/laptop.png" alt="Notebook" />
 						</div>
 						<div class="col-md-6 col-12">
 							<p class="subtitle">Seja Poussée</p>
@@ -237,7 +487,7 @@
 							<p class="home-text pt-3">
 								<a href="#" class="btn-green"
 									>Quero falar com vocês
-									<img src="./assets/img/arrow.png" alt="Seta"
+									<img src="../assets/img/arrow.png" alt="Seta"
 								/></a>
 							</p>
 						</div>
@@ -250,7 +500,7 @@
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-12">
-						<img src="./assets/img/logo-poussee.png" alt="Logo Poussée" />
+						<img src="../assets/img/logo-poussee.png" alt="Logo Poussée" />
 					</div>
 				</div>
 				<div class="row text-center pt-5 footer-size">
@@ -275,24 +525,24 @@
 						<ul>
 							<li>
 								<a href="https://www.facebook.com/agenciapoussee/">
-									<img src="./assets/img/facebook.png" alt="Facebook" />
+									<img src="../assets/img/facebook.png" alt="Facebook" />
 								</a>
 							</li>
 							<li>
 								<a href="https://www.instagram.com/agenciapoussee/">
-									<img src="./assets/img/intagram.png" alt="Instagram" />
+									<img src="../assets/img/intagram.png" alt="Instagram" />
 								</a>
 							</li>
 							<li>
 								<a
 									href="https://www.linkedin.com/company/ag%C3%AAncia-pouss%C3%A9e"
 								>
-									<img src="./assets/img/linkedin.png" alt="LinkedIn" />
+									<img src="../assets/img/linkedin.png" alt="LinkedIn" />
 								</a>
 							</li>
 							<li>
 								<a href="https://twitter.com/AgenciaPoussee">
-									<img src="./assets/img/twitter.png" alt="Twitter" />
+									<img src="../assets/img/twitter.png" alt="Twitter" />
 								</a>
 							</li>
 						</ul>
@@ -300,7 +550,7 @@
 				</div>
 				<div class="row text-center">
 					<div class="col-12">
-						<img src="./assets/img/selo-site.png" alt="Selo site Poussée" />
+						<img src="../assets/img/selo-site.png" alt="Selo site Poussée" />
 						<br />
 						<p>© Poussée 2021. Todos os direitos reservados.</p>
 					</div>
@@ -321,8 +571,8 @@
 	type="text/javascript"
 	src="https://code.jquery.com/jquery-1.11.0.min.js"
 ></script>
-<script src="./Content/Plugins/Slick/slick.min.js"></script>
-<script src="./Content/Plugins/scrollTo/jquery.scrollTo.js"></script>
-<script src="./Content/Plugins/scrollTo/jquery.localScroll.js"></script>
-<script src="./Scripts/main.js"></script>
-<script src="./Content/Plugins/Bootstrap/bootstrap.min.js"></script>
+<script src="../Content/Plugins/Slick/slick.min.js"></script>
+<script src="../Content/Plugins/scrollTo/jquery.scrollTo.js"></script>
+<script src="../Content/Plugins/scrollTo/jquery.localScroll.js"></script>
+<script src="../Scripts/main.js"></script>
+<script src="../Content/Plugins/Bootstrap/bootstrap.min.js"></script>
