--- a/o-que-fazemos/seo.html
+++ b/o-que-fazemos/seo.html
@@ -37,9 +37,9 @@
 		<header class="main-header bg-seo">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
-					<a class="navbar-brand" href="index.html">
+					<a class="navbar-brand" href="./index.html">
 						<img
-							src="../assets/img/logo-poussee-white.png"
+							src=".././assets/img/logo-poussee-white.png"
 							alt="Logo Poussée"
 						/>
 					</a>
@@ -74,7 +74,7 @@
 										>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="branding.html">Branding</a>
+										<a href="./branding.html">Branding</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="desenvolvimento.html">Desenvolvimento</a>
@@ -88,7 +88,9 @@
 									<li class="p-2 nav-item">
 										<a href="inbound-marketing.html">Inbound Marketing</a>
 									</li>
-									<li class="p-2 nav-item"><a href="seo.html">SEO</a></li>
+									<li class="p-2 nav-item">
+										<a href="seo.html">SEO</a>
+									</li>
 									<li class="p-2 nav-item">
 										<a href="social-media.html">Social Media</a>
 									</li>
@@ -106,22 +108,28 @@
 								>
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
-										<a href="../nossa-historia.html">Nossa historia</a>
+										<a href=".././quem-somos/nossa-historia.html"
+											>Nossa historia</a
+										>
 									</li>
 									<li class="p-2 nav-item">
-										<a href="../nosso-time.html">Nosso time</a>
+										<a href=".././quem-somos/nosso-time.html">Nosso time</a>
 									</li>
 								</ul>
 							</li>
 							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
-							<li class="p-2 nav-item"><a href="#">Blog</a></li>
-							<li class="p-2 nav-item"><a href="#">Contato</a></li>
+							<li class="p-2 nav-item">
+								<a href="https://blog.poussee.com.br/">Blog</a>
+							</li>
+							<li class="p-2 nav-item">
+								<a href="../contato.html">Contato</a>
+							</li>
 							<li class="p-2 nav-item diagnostico">
 								<a
 									href="https://meusucesso.poussee.com.br/lp-diagnostico-gratuito-01"
 									target="_blank"
 									>Diagnostico gratuito<img
-										src="../assets/img/arrow-white.png"
+										src=".././assets/img/arrow-white.png"
 										alt="seta"
 								/></a>
 							</li>
