inserção das páginas cases e case contábil

--- a/contato.html
+++ b/contato.html
@@ -111,14 +111,14 @@
 								>
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
-										<a href="nossa-historia.html">Nossa historia</a>
+										<a href="nossa-historia.html">Nossa história</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="nosso-time.html">Nosso time</a>
 									</li>
 								</ul>
 							</li>
-							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
+							<li class="p-2 nav-item"><a href="./cases/cases.html">Nossos cases</a></li>
 							<li class="p-2 nav-item">
 								<a href="https://blog.poussee.com.br/">Blog</a>
 							</li>
