--- a/o-que-fazemos/anuncios-patrocinados.html
+++ b/o-que-fazemos/anuncios-patrocinados.html
@@ -39,7 +39,7 @@
 		<header class="main-header bg-anuncio">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
-					<a class="navbar-brand" href="./index.html">
+					<a class="navbar-brand" href="../index.html">
 						<img
 							src=".././assets/img/logo-poussee-white.png"
 							alt="Logo Poussée"
@@ -111,7 +111,7 @@
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
 										<a href=".././quem-somos/nossa-historia.html"
-											>Nossa historia</a
+											>Nossa história</a
 										>
 									</li>
 									<li class="p-2 nav-item">
@@ -119,7 +119,9 @@
 									</li>
 								</ul>
 							</li>
-							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
+							<li class="p-2 nav-item">
+								<a href="../cases/cases.html">Nossos cases</a>
+							</li>
 							<li class="p-2 nav-item">
 								<a href="https://blog.poussee.com.br/">Blog</a>
 							</li>
@@ -168,14 +170,16 @@
 				<div class="container">
 					<div class="row pb-5" style="align-items: center">
 						<div class="row title-adjustment">
-							<p class="subtitle">Anúncios Patrocinados</p>
-							<hr />
-							<h2 class="title-content">
-								Alcance resultados incríveis em um curto período de tempo
-							</h2>
+							<div class="col-md-5 col-12 text-left" style="padding-left: 0">
+								<p class="subtitle">Anúncios Patrocinados</p>
+								<hr />
+							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 col-12 text-left">
+								<h2 class="title-content">
+									Alcance resultados incríveis em um curto período de tempo
+								</h2>
 								<p class="home-text">
 									Já imaginou ter o seu site logo no início das páginas de
 									resultados de busca? E que tal ter uma postagem exibida para
