--- a/quem-somos/nossa-historia.html
+++ b/quem-somos/nossa-historia.html
@@ -118,14 +118,16 @@
 								>
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
-										<a href="nossa-historia.html">Nossa historia</a>
+										<a href="nossa-historia.html">Nossa história</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="nosso-time.html">Nosso time</a>
 									</li>
 								</ul>
 							</li>
-							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
+							<li class="p-2 nav-item">
+								<a href="../cases/cases.html">Nossos cases</a>
+							</li>
 							<li class="p-2 nav-item">
 								<a href="https://blog.poussee.com.br/">Blog</a>
 							</li>
@@ -173,14 +175,14 @@
 						<div class="col-md-5 col-12 text-left our-history-correction">
 							<p class="subtitle">#WeArePoussée</p>
 							<hr />
-							<h1 class="title-content">
-								Impulsionados por <br />
-								desafios e pessoas
-							</h1>
 						</div>
 						<div class="row pb-5" style="align-items: flex-start">
 							<div class="col-md-1 col-12 text-left"></div>
 							<div class="col-md-5 col-12 text-left">
+								<h1 class="title-content">
+									Impulsionados por <br />
+									desafios e pessoas
+								</h1>
 								<p class="home-text">
 									A Poussée nasceu em 2017 com o propósito de promover o
 									crescimento de marcas, oferecendo serviços de alta performance
@@ -277,7 +279,7 @@
 								Entre em contato e saiba mais sobre esta solução.
 							</h2>
 							<p class="home-text pt-3">
-								<a href="#" class="btn-green"
+								<a href="../contato.html" class="btn-green"
 									>Quero falar com vocês
 									<img src="../assets/img/arrow.png" alt="Seta"
 								/></a>
