--- a/quem-somos/nosso-time.html
+++ b/quem-somos/nosso-time.html
@@ -116,14 +116,16 @@
 								>
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
-										<a href="nossa-historia.html">Nossa historia</a>
+										<a href="nossa-historia.html">Nossa história</a>
 									</li>
 									<li class="p-2 nav-item">
 										<a href="nosso-time.html">Nosso time</a>
 									</li>
 								</ul>
 							</li>
-							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
+							<li class="p-2 nav-item">
+								<a href="../cases/cases.html">Nossos cases</a>
+							</li>
 							<li class="p-2 nav-item">
 								<a href="https://blog.poussee.com.br/">Blog</a>
 							</li>
@@ -485,7 +487,7 @@
 								Entre em contato e saiba mais sobre esta solução.
 							</h2>
 							<p class="home-text pt-3">
-								<a href="#" class="btn-green"
+								<a href="../contato.html" class="btn-green"
 									>Quero falar com vocês
 									<img src="../assets/img/arrow.png" alt="Seta"
 								/></a>
