--- a/o-que-fazemos/branding.html
+++ b/o-que-fazemos/branding.html
@@ -37,7 +37,7 @@
 		<header class="main-header bg-branding">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
-					<a class="navbar-brand" href="./index.html">
+					<a class="navbar-brand" href="../index.html">
 						<img
 							src=".././assets/img/logo-poussee-white.png"
 							alt="Logo Poussée"
@@ -109,7 +109,7 @@
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
 										<a href=".././quem-somos/nossa-historia.html"
-											>Nossa historia</a
+											>Nossa história</a
 										>
 									</li>
 									<li class="p-2 nav-item">
@@ -117,7 +117,9 @@
 									</li>
 								</ul>
 							</li>
-							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
+							<li class="p-2 nav-item">
+								<a href="../cases/cases.html">Nossos cases</a>
+							</li>
 							<li class="p-2 nav-item">
 								<a href="https://blog.poussee.com.br/">Blog</a>
 							</li>
@@ -162,13 +164,17 @@
 		<main>
 			<section class="services-info">
 				<div class="container">
-					<div class="row pb-5" style="align-items: center">
+					<div class="row" style="align-items: center">
 						<div class="col-md-6 col-12 text-left">
 							<p class="subtitle">Branding</p>
 							<hr />
-							<h1 class="title-content">
+						</div>
+					</div>
+					<div class="row pb-5" style="align-items: flex-start">
+						<div class="col-md-6 col-12 text-left">
+							<h2 class="title-content">
 								Construa uma marca forte e reconhecida no mercado
-							</h1>
+							</h2>
 							<p class="home-text">
 								Você sabe o que é necessário para ter uma marca de sucesso?
 								Muito além de um logotipo moderno, o reconhecimento depende de
@@ -352,7 +358,7 @@
 								Entre em contato e saiba mais sobre esta solução.
 							</h2>
 							<p class="home-text pt-3">
-								<a href="#" class="btn-green"
+								<a href="../contato.html" class="btn-green"
 									>Quero falar com vocês
 									<img src="../assets/img/arrow.png" alt="Seta"
 								/></a>
