--- a/o-que-fazemos/desenvolvimento.html
+++ b/o-que-fazemos/desenvolvimento.html
@@ -39,7 +39,7 @@
 		<header class="main-header bg-desenvolvimento">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
-					<a class="navbar-brand" href="./index.html">
+					<a class="navbar-brand" href="../index.html">
 						<img
 							src=".././assets/img/logo-poussee-white.png"
 							alt="Logo Poussée"
@@ -111,7 +111,7 @@
 								<ul class="dropdown-menu">
 									<li class="p-2 nav-item">
 										<a href=".././quem-somos/nossa-historia.html"
-											>Nossa historia</a
+											>Nossa história</a
 										>
 									</li>
 									<li class="p-2 nav-item">
@@ -119,7 +119,9 @@
 									</li>
 								</ul>
 							</li>
-							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
+							<li class="p-2 nav-item">
+								<a href="../cases/cases.html">Nossos cases</a>
+							</li>
 							<li class="p-2 nav-item">
 								<a href="https://blog.poussee.com.br/">Blog</a>
 							</li>
@@ -164,10 +166,14 @@
 		<main>
 			<section class="services-info">
 				<div class="container">
-					<div class="row pb-5" style="align-items: center">
+					<div class="row" style="align-items: center">
 						<div class="col-md-6 col-12 text-left">
 							<p class="subtitle">Desenvolvimento</p>
 							<hr />
+						</div>
+					</div>
+					<div class="row pb-5" style="align-items: flex-start">
+						<div class="col-md-6 col-12 text-left">
 							<h1 class="title-content">
 								Invista em um site profissional e conquiste visibilidade
 							</h1>
@@ -358,7 +364,7 @@
 								Entre em contato e saiba mais sobre esta solução.
 							</h2>
 							<p class="home-text pt-3">
-								<a href="#" class="btn-green"
+								<a href="../contato.html" class="btn-green"
 									>Quero falar com vocês
 									<img src="../assets/img/arrow.png" alt="Seta"
 								/></a>
