correção banner cases

--- a/cases/cases.html
+++ b/cases/cases.html
@@ -36,7 +36,7 @@
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
 	<body>
-		<header class="main-header bg-case-contabil">
+		<header class="main-header bg-cases">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="../index.html">
